# DroneSimEnv

./: .gitignore  .gitmodules  README.md
Companion/companion_ws/src/keyboard_control_v1/: package.xml  setup.cfg  setup.py
Companion/companion_ws/src/keyboard_control_v1/keyboard_control_v1/: cmd_vel_px4_bridge.py  keyboard_control.py
Companion/companion_ws/src/keyboard_control_v1/launch/: keyboard_control_v1_bridge.launch.py  keyboard_control_v1_real.launch.py
Companion/companion_ws/src/keyboard_control_v1/resource/: keyboard_control_v1
Companion/companion_ws/src/offboard_control/: README.md  package.xml  setup.py
Companion/companion_ws/src/offboard_control/offboard_control/: offboard_mode_node.py
Docker/: ground-entrypoint.sh  run-ubuntu.sh  run-wsl2.sh
Docker/Dockerfile/: Dockerfile.companion  Dockerfile.drone_sim  Dockerfile.ground  docker-compose-ubuntu.yml  docker-compose-wsl2.yml
